test/bad/generics/type05.px

func f<T>(x: T): Void def
    x = 3

f("")
